--- a/package.json
+++ b/package.json
@@ -5,22 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "photo",
-    "capture",
-    "upload",
-    "express",
-    "nodejs"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
+    "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
